<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/look_header">

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/numberOfRows_entries"
            app:entryValues="@array/numberOfRows_values"
            app:key="rows"
            app:title="Number of rows"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/numberOfColumns_entries"
            app:entryValues="@array/numberOfColumns_values"
            app:key="columns"
            app:title="Number of columns per screen"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_settings_24"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="Notifications">

        <SeekBarPreference
            app:key="volume_notifications"
            app:title="Volume"
            app:showSeekBarValue="true"
            app:defaultValue= "60" />

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="Disable notifications"
            app:summaryOn="You will no longer receive any notifications"
            app:summaryOff="You will receive all notifications"/>
    </PreferenceCategory>


</PreferenceScreen>