<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialogDeleteViewModel"
            type="com.ergonotes.viewmodels.DialogDeleteViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#646464">

        <TextView
            android:id="@+id/top_filler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#646464"
            app:layout_constraintBottom_toTopOf="@id/button_delete_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="64" />

        <TextView
            android:id="@+id/textView_dialog_fragment"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="2dp"
            android:background="@color/windows_gray"
            android:gravity="center"
            android:text="@string/sure_to_delete"
            app:layout_constraintBottom_toTopOf="@+id/button_delete_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_cancel_dialog"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:background="@color/windows_gray_red_tone"
            android:text="@string/cancel"
            app:layout_constraintBottom_toTopOf="@id/bottom_filler"
            app:layout_constraintEnd_toStartOf="@+id/button_delete_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_filler" />

        <Button
            android:id="@+id/button_delete_dialog"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:background="@color/windows_gray_green_tone"
            android:text="@string/yes"
            app:layout_constraintBottom_toTopOf="@+id/bottom_filler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_cancel_dialog"
            app:layout_constraintTop_toBottomOf="@id/top_filler"
            app:layout_constraintVertical_weight="2" />

        <TextView
            android:id="@+id/bottom_filler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#646464"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_delete_dialog"
            app:layout_constraintVertical_weight="34" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
