<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainFragmentViewModel"
            type="com.ergonotes.viewmodels.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_notes"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_notes"
        tools:context=".fragments.MainFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_notes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/button_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="64">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageButton
            android:id="@+id/button_exit"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/my_button_bg"
            android:contentDescription="@string/close_the_app"
            android:src="@drawable/ic_baseline_add_to_home_screen_24"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_titles"
            app:layout_constraintEnd_toStartOf="@id/button_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_notes"
            app:layout_constraintVertical_weight="2" />

        <ImageButton
            android:id="@+id/button_settings"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/my_button_bg"
            android:contentDescription="@string/go_to_settings"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_titles"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintStart_toEndOf="@id/button_exit"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_notes"
            app:layout_constraintVertical_weight="2" />

        <ImageButton
            android:id="@+id/button_add"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/my_button_bg"
            android:contentDescription="@string/add_new_note"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_titles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_settings"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_notes"
            app:layout_constraintVertical_weight="2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_titles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_settings"
            app:layout_constraintVertical_weight="34" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>